tests/fixtures/invalid/int_lt_str.py
# Cannot compare with < Int and Str
x: bool = 1 < "hello"
